--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,14 +1,18 @@
-version: '3.9'
+version: "3.9"
 
 services:
-  stacktastic-main:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  stacktastic-staging:
+    image: stacktastic-main
     environment:
       - NODE_ENV=production
     labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.stacktastic-staging.rule=Host(`staging.stacktastic.dev`)'
-      - 'traefik.http.routers.stacktastic-staging.entrypoints=web'
-      - 'traefik.http.services.stacktastic-staging.loadbalancer.server.port=3000'
+      - "traefik.enable=true"
+      - "traefik.http.routers.stacktastic-staging.rule=Host(`staging.stacktastic.dev`)"
+      - "traefik.http.routers.stacktastic-staging.entrypoints=web"
+      - "traefik.http.services.stacktastic-staging.loadbalancer.server.port=3000"
+    networks:
+      - web
+
+networks:
+  traefik:
+    external: true
