--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,15 @@ jobs:
           source: "image.tar.gz"
           target: "~/stacktastic/${{ github.ref_name }}/"
 
+      - name: Copy docker-compose file to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: "docker-compose.${{ github.ref_name }}.yml"
+          target: "~/stacktastic/${{ github.ref_name }}/"
+
       - name: SSH and deploy
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -39,6 +48,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            set -e
             cd ~/stacktastic/${{ github.ref_name }}
             gunzip -f image.tar.gz
             docker load < image.tar
