--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   stacktastic-main:
     image: stacktastic-main
@@ -14,5 +12,5 @@ services:
       - web
 
 networks:
-  traefik:
+  web:
     external: true
