Tag Docker image as local for Compose; avoid Docker Hub pulls in deploy.yml

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,6 +1,6 @@
 services:
   stacktastic-staging:
-    image: stacktastic-main
+    image: stacktastic-main:local
     environment:
       - NODE_ENV=production
     labels:
