--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -1,6 +1,6 @@
 services:
   stacktastic-main:
-    image: stacktastic-main
+    image: stacktastic-main:local
     environment:
       - NODE_ENV=production
     labels:
