Enable HTTPS with Traefik TLS + certresolver in docker-compose files

--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -6,7 +6,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.stacktastic-main.rule=Host(`stacktastic.dev`)"
-      - "traefik.http.routers.stacktastic-main.entrypoints=web"
+      - "traefik.http.routers.stacktastic-main.entrypoints=websecure"
+      - "traefik.http.routers.stacktastic-main.tls.certresolver=myresolver"
       - "traefik.http.services.stacktastic-main.loadbalancer.server.port=3000"
     networks:
       - web
