correct router label syntax and naming for staging and main services

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -5,7 +5,7 @@ services:
       - NODE_ENV=production
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.stacktastic-staging.rule=Host(`staging.stacktastic.dev`)"
+      - 'traefik.http.routers.stacktastic-main.rule=Host("staging.stacktastic.dev")'
       - "traefik.http.routers.stacktastic-staging.entrypoints=websecure"
       - "traefik.http.routers.stacktastic-staging.tls.certresolver=myresolver"
       - "traefik.http.services.stacktastic-staging.loadbalancer.server.port=3000"
