--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -1,11 +1,11 @@
 services:
   stacktastic-main:
-    image: stacktastic-main:local
+    image: stacktastic-main:<sha>
     environment:
       - NODE_ENV=production
     labels:
       - "traefik.enable=true"
-      - 'traefik.http.routers.stacktastic-main.rule=Host("stacktastic.dev")'
+      - "traefik.http.routers.stacktastic-main.rule=Host(`stacktastic.dev`)"
       - "traefik.http.routers.stacktastic-main.entrypoints=websecure"
       - "traefik.http.routers.stacktastic-main.tls.certresolver=myresolver"
       - "traefik.http.services.stacktastic-main.loadbalancer.server.port=3000"
