--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build --pull -t stacktastic-main:${{ github.sha }} .
-          docker save stacktastic-main:${{ github.sha }} | gzip > image.tar.gz
+          docker build --pull -t stacktastic-${{ github.ref_name }}:${{ github.sha }} .
+          docker save stacktastic-${{ github.ref_name }}:${{ github.sha }} | gzip > image.tar.gz
 
       - name: Copy image and docker-compose to server
         uses: appleboy/scp-action@v0.1.7
@@ -29,10 +29,8 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: |
-            image.tar.gz
-            docker-compose.main.yml
-          target: ~/stacktastic/main/
+          source: "image.tar.gz,docker-compose.${{ github.ref_name }}.yml"
+          target: "~/stacktastic/${{ github.ref_name }}/"
 
       - name: SSH and deploy
         uses: appleboy/ssh-action@v1.0.0
@@ -42,8 +40,8 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             set -e
-            cd ~/stacktastic/main
+            cd ~/stacktastic/${{ github.ref_name }}
             gunzip -f image.tar.gz
             docker load < image.tar
-            IMAGE_TAG=${{ github.sha }} docker-compose -f docker-compose.main.yml up -d --force-recreate
+            IMAGE_TAG=${{ github.sha }} docker-compose -f docker-compose.${{ github.ref_name }}.yml up -d --force-recreate
             rm -f image.tar
