issue ssl certificate for each domain separately

--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -5,9 +5,18 @@ services:
       - NODE_ENV=production
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.stacktastic-main.rule=Host(`stacktastic.dev`, `www.stacktastic.dev`)"
+
+      # Primary domain router
+      - "traefik.http.routers.stacktastic-main.rule=Host(`stacktastic.dev`)"
       - "traefik.http.routers.stacktastic-main.entrypoints=websecure"
       - "traefik.http.routers.stacktastic-main.tls.certresolver=myresolver"
+
+      # Secondary www router
+      - "traefik.http.routers.stacktastic-www.rule=Host(`www.stacktastic.dev`)"
+      - "traefik.http.routers.stacktastic-www.entrypoints=websecure"
+      - "traefik.http.routers.stacktastic-www.tls.certresolver=myresolver"
+
+      # Shared service for both
       - "traefik.http.services.stacktastic-main.loadbalancer.server.port=3000"
     networks:
       - web
