--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
+    "@friendlycaptcha/sdk": "^0.1.26",
+    "@friendlycaptcha/server-sdk": "^0.1.2",
     "@iconify/svelte": "^5.0.0",
     "@types/nodemailer": "^6.4.17",
     "nodemailer": "^7.0.5"
