--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@friendlycaptcha/server-sdk": "^0.1.2",
     "@iconify/svelte": "^5.0.0",
     "@types/nodemailer": "^6.4.17",
+    "dotenv": "^17.2.0",
     "nodemailer": "^7.0.5"
   }
 }
