--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "rollup": "^3.29.5",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0",
