--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -9,6 +9,7 @@ services:
       - MAIL_USER=${MAIL_USER}
       - MAIL_PASS=${MAIL_PASS}
       - FRIENDLY_CAPTCHA_SECRET=${FRIENDLY_CAPTCHA_SECRET}
+      - API_KEY_FRIENDLY_CAPTCHA=${API_KEY_FRIENDLY_CAPTCHA}
     labels:
       - "traefik.enable=true"
 
