--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,7 @@ jobs:
             MAIL_USER=${{ secrets.MAIL_USER }} \
             MAIL_PASS=${{ secrets.MAIL_PASS }} \
             FRIENDLY_CAPTCHA_SECRET=${{ secrets.FRIENDLY_CAPTCHA_SECRET }} \
+            CAPTCHA_SECRET=${{ secrets.CAPTCHA_SECRET }} \
             IMAGE_TAG=${{ github.sha }} docker-compose -f docker-compose.${{ github.ref_name }}.yml up -d --force-recreate
 
             rm -f image.tar
