inject env vars in staging deployment

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -3,6 +3,14 @@ services:
     image: stacktastic-staging:${IMAGE_TAG}
     environment:
       - NODE_ENV=production
+      - CONTACT_RECEIVER=${CONTACT_RECEIVER}
+      - MAIL_HOST=${MAIL_HOST}
+      - MAIL_PORT=${MAIL_PORT}
+      - MAIL_USER=${MAIL_USER}
+      - MAIL_PASS=${MAIL_PASS}
+      - FRIENDLY_CAPTCHA_SECRET=${FRIENDLY_CAPTCHA_SECRET}
+      - API_KEY_FRIENDLY_CAPTCHA=${API_KEY_FRIENDLY_CAPTCHA}
+      - CAPTCHA_SECRET=${CAPTCHA_SECRET}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.stacktastic-staging.rule=Host(`staging.stacktastic.dev`)"
