--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@upstash/redis": "^1.35.1",
     "dompurify": "^3.2.6",
     "nodemailer": "^7.0.5",
+    "redis": "^5.6.0",
     "simple-icons": "^15.7.0"
   }
 }
