--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,8 @@
 # CSRF Protection (optional - will use CAPTCHA_SECRET as fallback)
 CSRF_SECRET=your-csrf-secret-key-here
 
-# Rate Limiting with Local Redis (optional - if not provided, rate limiting will be disabled)
+# Optional - Redis for rate limiting (local Docker container)
 REDIS_URL=redis://localhost:6379
-
-# Alternative: Upstash Redis (cloud-based)
-# UPSTASH_REDIS_REST_URL=https://your-redis-instance.upstash.io
-# UPSTASH_REDIS_REST_TOKEN=your-redis-token
 
 # Existing variables (already required)
 CAPTCHA_SECRET=your-captcha-secret
