--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "prettier --check . && eslint .",
     "test": "vitest",
     "test:run": "vitest run",
+    "test:deployment": "vitest run --reporter=verbose tests/security.test.ts tests/rate-limiting.test.ts tests/security-integration.test.ts",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage"
   },
