feat: migrate from Redis to in-memory rate limiting
- Remove Redis dependency completely to eliminate ES module bundling issues
- Implement clean in-memory rate limiting with sliding window algorithm
- Maintain identical rate limiting behavior (3 req/10min, 10 global/min)
- Rename local-redis-ratelimit.ts -> ratelimit.ts for accuracy
- Update all documentation and configuration files
- Simplify Docker deployment (single container, no external deps)
- Clean up CI/CD pipeline (remove Redis service)
- All 34 tests passing with new implementation

BREAKING CHANGE: Redis is no longer supported for rate limiting.
Rate limiting now uses in-memory storage with automatic cleanup.

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,4 @@ VITE_CAPTCHA_SECRET=your-cap-server-secret
 # Security Configuration (Optional)
 CSRF_SECRET=your-csrf-secret-key-here
 
-# Redis Rate Limiting (Optional)
-REDIS_URL=redis://localhost:6379
+# Rate limiting uses in-memory storage - no external dependencies required
