Remove inconsistent project metrics and fix grid layouts
- Remove conflicting project counts (10+ vs 50+) for authenticity
- About.svelte: Remove '🚀 Always Building' metric, keep only meaningful stats
- CallToAction.svelte: Remove '💡 Ideas in Progress' metric
- Fix grid layouts from 3-column to 2-column to accommodate removed metrics
- Maintain clean, balanced visual presentation with fewer but more meaningful metrics

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,7 +94,7 @@ jobs:
             sleep 30
 
             if [ "${{ github.ref_name }}" = "main" ]; then
-              HEALTH_URL="https://stacktastic.com"
+              HEALTH_URL="https://stacktastic.dev"
             else
               HEALTH_URL="https://staging.stacktastic.dev"
             fi
